[UI] Layout and content spacing fix

--- a/style.css
+++ b/style.css
@@ -1,56 +1,65 @@
-
-a{
-    color: #555;
-    text-decoration: none;
+a {
+  color: #555;
+  text-decoration: none;
 }
 a:hover {
-    font-weight: 400;
-    color:#333;
-    text-decoration: none;
+  font-weight: 400;
+  color: #333;
+  text-decoration: none;
 }
 .entry {
-    padding: 5px 5px 5px 5px;
+  padding: 5px 5px 5px 5px;
 }
 .floating-d {
-    position: fixed;
-    bottom: 10px;
-    right: 10px;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
 }
 .floating-p {
-    position: fixed;
-    bottom: 55px;
-    right: 10px;
+  position: fixed;
+  bottom: 55px;
+  right: 10px;
 }
 .badge {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 .languages {
-    margin: 10px 5px 10px 5px;
-    margin-top: 10px;
-    width: auto;
+  margin: 10px 5px 10px 5px;
+  margin-top: 10px;
+  width: auto;
+}
+.exp-title-container {
+  margin-bottom: 0.5rem;
 }
 .exp-title {
-    font-weight: 600;
+  font-weight: 600;
+}
+.exp-date {
+  line-height: 1.2;
 }
 
-@media (max-width: 768px){
-    .information{
-        margin-top: 25px;
-    }
+@media (max-width: 960px) {
+  .information {
+    margin-top: 25px;
+  }
+  .exp-title-container {
+    flex-direction: column;
+    margin-bottom: 1rem;
+  }
 }
 
 @media print {
-    a:link {
-        border-bottom: none !important;
-        text-decoration: none !important;
-    }
-    a[href]:after {
-        content: none !important;
-    }
-    .no-printme  {
-		display: none;
-	}
-	.printme  {
-		display: block;
-	}
+  a:link {
+    border-bottom: none !important;
+    text-decoration: none !important;
+  }
+  a[href]:after {
+    content: none !important;
+  }
+  .no-printme {
+    display: none;
+  }
+  .printme {
+    display: block;
+  }
 }
